<resources>
    <string name="app_name">Hanger</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="title_secondary_sensor">Secondary Sensor</string>
    <string name="title_connections">Connections</string>
    <string name="user_description">User Description, or invitation message</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_decline">Decline</string>
    <string name="userImage">User Image</string>
    <string name="btn_unmatch">Unmatch</string>
    <string name="already_registered">Already registered?</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="h_a_n_g_e_r">H A N G E R</string>
    <string name="sign_in">Sign In</string>
    <string name="not_yet_registered">Not yet registered?</string>
    <string name="logo">Logo</string>
    <string name="accepted">Accepted!</string>

    <string-array name="array_of_tabs">
        <item>Login</item>
        <item>Register</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>